# GAM-200-250

WeeklyWorkLogs/: .~lock.GAM200_a.kacmarcik_Weekly_Work_Log–Week7.docx#  .~lock.GAM200_a.kacmarcik_Weekly_Work_Log–Week9.docx#  GAM200_a.kacmarcik_Weekly_Work_Log–Week0.docx  GAM200_a.kacmarcik_Weekly_Work_Log–Week1.docx  GAM200_a.kacmarcik_Weekly_Work_Log–Week10.docx  GAM200_a.kacmarcik_Weekly_Work_Log–Week11.docx  GAM200_a.kacmarcik_Weekly_Work_Log–Week12.docx  GAM200_a.kacmarcik_Weekly_Work_Log–Week13.docx  GAM200_a.kacmarcik_Weekly_Work_Log–Week14.docx  GAM200_a.kacmarcik_Weekly_Work_Log–Week2.docx  GAM200_a.kacmarcik_Weekly_Work_Log–Week3.docx  GAM200_a.kacmarcik_Weekly_Work_Log–Week4.docx  GAM200_a.kacmarcik_Weekly_Work_Log–Week5.docx  (+9 more)
_game/subsystems/ObjectSerilazation/: #DeSerializable.h#  #makefile#  .#makefile  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  DSObject.cpp  DSObject.cpp~  DSObject.h  DeSerializable.cpp  DeSerializable.cpp~  DeSerializable.h  DeSerializable.h~  Doxyfile  Makefile  ObjectDeSerialization.cpp  ObjectDeSerialization.h  ObjectDeSerialization_private.cpp  ObjectDeSerialization_private.h  ObjectDeSerilazation.cpp  ObjectDeSerilazation.h  ObjectDeSerilazation.h~  ObjectSerialization.cpp  ObjectSerilazation.cpp  ObjectSerilazation.cpp~  UnitTestDriver-1.cpp  _unit_test.cpp  _unit_test.cpp~  cmake_install.cmake  executeTests  makefile_  makefile~  tempo
_game/subsystems/ObjectSerilazation/_in/: test.json  test.json~
_game/subsystems/ObjectSerilazation/_tOut/: memory-1.txt  out1.txt
_game/subsystems/ObjectSerilazation/gnu/: gnu
(+15 files in other folders)
